@@ -49,6 +49,7 @@ Enhancements:
 - #7379 Resolve Qt framework path with `install_name_tool`
 - #7380 Add `qt6-qpa-plugins` Qt dependency for Debian
 - #7381 Set macOS min version to macOS 12.0
+- #7382 Re-run `macdeployqt6` to copy missing Qt 6 dependencies
 
 # 1.14.6
 
